[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chint-etm-mdm"
version = "0.1.0"
description = "Portable CHINT ETM upload_goods template filler"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "openpyxl>=3.1",
]

[project.scripts]
chint-etm-mdm = "chint_etm_mdm.app:main"
chint-etm-mdm-fill = "chint_etm_mdm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chint_etm_mdm = ["rules/*.json"]
